# map_coloring

./: CMakeLists.txt  Graph.h  main.cpp  readme.txt  testMain.cpp
coloring/: Coloring.cpp  Coloring.h  Graph.h  Linear5.cpp  Linear5.h
generator/: plantri.c
include/: CommandLineParser.h  Generator.h  Timer.h
src/: CommandLineParser.cpp  Generator.cpp
unittest/: CMakeLists.txt  TestColoring.cpp  TestColoring.h  TestGraph.cpp
